fixed tiny text syndrome on IE8- by replacing 'rem' with 'em'

--- a/media/css/grayson.base.css
+++ b/media/css/grayson.base.css
@@ -204,10 +204,10 @@ p.home-left-column, p.home-right-column {font-size: 1em; line-height: 1.5em;}
 .collection-last {background-image: none;}
 .collection-text {float: left; width: 270px; cursor: pointer;}
 
-.collection-home-title{font-family: 'Italianno', cursive; font-size: 3.1rem; text-transform: capitalize; margin-right:8px}
-.collection-home-brand{text-transform: uppercase;font-size: 1.1rem; letter-spacing: .08em; color: #afa890; font-weight: normal}
+.collection-home-title{font-family: 'Italianno', cursive; font-size: 3.1em; text-transform: capitalize; margin-right:8px}
+.collection-home-brand{text-transform: uppercase;font-size: 1.1em; letter-spacing: .08em; color: #afa890; font-weight: normal}
 
-.collection-title{margin:145px 0 15px 0;width:255px; font-family: 'Italianno', cursive; font-size: 3.5rem; float:left;  text-transform: capitalize}
+.collection-title{margin:145px 0 15px 0;width:255px; font-family: 'Italianno', cursive; font-size: 3.5em; float:left;  text-transform: capitalize}
 .section-title{font-size:24px;  font-family: 'OmnesRegularItalic'; margin-bottom:10px; color:#d4cbac}
 .collection-brand{text-transform: uppercase;width:255px; font-size: 1.1rem; letter-spacing: .08em; color: #afa890; font-weight: normal; clear:left; float:left}
 
@@ -279,9 +279,9 @@ box-shadow:none; border:none;}
 #accent-module-ottomans-container.accent-module-container li:nth-child(7) {background-image: none;}
 .accent-module img{
 	cursor:pointer; -webkit-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, .5); box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, .5);}
-.accent-module-title{font-family: 'Italianno', cursive; font-size: 2.6rem; text-transform: capitalize; margin:10px 0 10px 0}
-.accent-module-type{font-family: 'Italianno', cursive; font-size: 2.1rem; color: #bfb7b2; }
-.accent-module-brand{text-transform: uppercase; font-size: .8rem; letter-spacing: .08em; color: #afa890; font-weight: normal}
+.accent-module-title{font-family: 'Italianno', cursive; font-size: 2.6em; text-transform: capitalize; margin:10px 0 10px 0}
+.accent-module-type{font-family: 'Italianno', cursive; font-size: 2.1em; color: #bfb7b2; }
+.accent-module-brand{text-transform: uppercase; font-size: .8em; letter-spacing: .08em; color: #afa890; font-weight: normal}
 
 
 
@@ -294,7 +294,7 @@ box-shadow:none; border:none;}
 
 .sidebar h2, .sidebar-collection-name, .sidebar-featured-name {
 	float: left; width: 100%; height: auto; margin: 0 0 8px 0;
-	text-transform: uppercase; font-size: 0.875rem; letter-spacing: .08em; color: #8e8c8a; font-weight: normal;
+	text-transform: uppercase; font-size: 0.875em; letter-spacing: .08em; color: #8e8c8a; font-weight: normal;
 }
 .sidebar-featured-name {margin: 0;}
 
@@ -316,7 +316,7 @@ box-shadow:none; border:none;}
 #tab-wrapper .tab-nav li.last { margin-right: 0; }
 #tab-wrapper .tab-nav li a {
 	display:block; width:auto; height:22px; padding:10px 9px 12px; background:transparent; border: 0; 
-	color:#cfc6a8; font-size:0.875rem; text-align:center; cursor: pointer; text-transform: uppercase; font-family: 'OmnesMedium';
+	color:#cfc6a8; font-size:0.875em; text-align:center; cursor: pointer; text-transform: uppercase; font-family: 'OmnesMedium';
 	-webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease;
 }
 #tab-wrapper .tab-nav li:last-child a {padding:10px 10px 12px;}
@@ -334,7 +334,7 @@ box-shadow:none; border:none;}
 
 .sidebar p.item-disclaimer {float: left; width: 95%; margin: 16px 0 10px 0; font-family: 'OmnesRegularItalic', Helvetica, Arial, sans-serf; color: #fff; }
 
-.sidebar h3, .item-price {float: left; width: 100%; height: auto; color: #bfb7b2; font-size: 1.375rem; font-weight: normal; margin: 0 0 10px 0;}
+.sidebar h3, .item-price {float: left; width: 100%; height: auto; color: #bfb7b2; font-size: 1.375em; font-weight: normal; margin: 0 0 10px 0;}
 .sidebar-label {float: left; width: 100%; height: auto; color: #8e8c8a; font-size: 0.875em; text-transform: uppercase; margin: 10px 0 5px 0;}
 
 .sidebar p {float: left; width: 98%; margin: -5px 0 10px; font-size: 1.125em;}
